[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/Backgroud.png" type="Texture" id=2]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 2.0
margin_right = -20.0
margin_bottom = 2.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 650, 317 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -22.0
margin_right = 20.0
margin_bottom = 22.0

[node name="Novo Jogo" type="Button" parent="VBoxContainer"]
margin_right = 76.0
margin_bottom = 20.0
text = "Novo jogo"

[node name="Ajuda" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 76.0
margin_bottom = 44.0
text = "Ajuda"

[node name="Sair" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 76.0
margin_bottom = 68.0
text = "Sair"

[connection signal="pressed" from="VBoxContainer/Novo Jogo" to="." method="_on_Novo_Jogo_pressed"]
[connection signal="pressed" from="VBoxContainer/Ajuda" to="." method="_on_Ajuda_pressed"]
[connection signal="pressed" from="VBoxContainer/Sair" to="." method="_on_Sair_pressed"]
